Fix nested anchor tags in index.html

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
             
             <div class="contact-icons">
                 <a href="https://github.com/albert2aliu-alt" target="_blank">
+                    <a href="https://github.com/erinlaci-ai" target="_blank">
                     <i class="fab fa-github"></i></a>
                 </a>
                 
