--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="sq">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="DEVRO ofron zgjidhje të fuqishme dhe portofolio të kompletuar të uebsajteve, duke krijuar aplikacione dhe sisteme për biznesin modern.">
     <title>DEVRO</title>
     <link rel="stylesheet" href="DEVRO.css">
