Update project description for Easy-Dine-Restaurant

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         </div>
         
         <div class="portfolio-card" src="">
-            <h3>Projekti 2</h3>
-            <p>Përshkrim i shkurtër i projektit tuaj të dytë.</p>
-            <a href="#" class="card-btn">Shiko Më Shumë</a>
+            <h3>Easy-Dine-Restaurant</h3>
+            <p>EasyDine është një platformë digjitale e krijuar për të thjeshtuar përvojën e ngrënies në restorante. Në thelb, ai shërben si një sistem menaxhimi dhe porosish online.</p>
+            <a href="https://albert2aliu-alt.github.io/EasyDine/" class="card-btn">Shiko Më Shumë</a>
         </div>
     </div>
 </section>
